fix: fixed code generaetor error, like as datastructure not correct